# JPEG module

set (MOD jpeg)
set (INC_MOD_JPEG TRUE PARENT_SCOPE)

add_library (${MOD})
set_module_defaults (${MOD} "Jpeg")

target_sources (${MOD} PRIVATE "jpeg.cpp")

add_dependencies (${MOD} libjpeg-turbo)

target_link_libraries (${MOD} PRIVATE libjpeg-turbo ${MATH_LINK})

target_include_directories (${MOD} PRIVATE ${LIBJPEG_TURBO_INCLUDE_DIRS})
